--- a/aftman.toml
+++ b/aftman.toml
@@ -5,4 +5,4 @@
 [tools]
 rojo = "rojo-rbx/rojo@7.4.4"
 zap = "red-blox/zap@0.6.14"
-# rojo = "rojo-rbx/rojo@6.2.0"
+wally = "UpliftGames/wally@0.3.2"
